Fix overlapping pop-ups

--- a/css/about-me.css
+++ b/css/about-me.css
@@ -4,8 +4,9 @@
 }
 
 .image img {
-    width: 100%;
+	width: 100%;
 	height: auto;
+	border-radius: 15px 50px;
 }
 
 .authorName {
